spl-spec/test/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT ID LC DefList RC
   14                | STRUCT ID

   15 VarDec: ID
   16       | VarDec LB INT RB
   17       | ERR

   18 FunDec: ID LP VarList RP
   19       | ID LP RP
   20       | ID LP VarList error LC
   21       | ID LP error LC

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec
   25         | error VarDec

   26 CompSt: LC DefList StmtList RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | Exp error SEMI
   33     | RETURN Exp error SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI
   40    | Specifier DecList error SEMI
   41    | error DecList SEMI
   42    | error FunDec CompSt

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGN Exp
   47    | VarDec ASSIGN ERR

   48 Exp: Exp ASSIGN Exp
   49    | Exp ERR Exp
   50    | Exp ASSIGN ERR
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp LT Exp
   54    | Exp LE Exp
   55    | Exp GT Exp
   56    | Exp GE Exp
   57    | Exp NE Exp
   58    | Exp EQ Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp MUL Exp
   62    | Exp DIV Exp
   63    | LP Exp RP
   64    | LP Exp error RP
   65    | SUB Exp
   66    | ID LP Args error SEMI
   67    | NOT Exp
   68    | ID LP Args RP
   69    | ID LP RP
   70    | Exp LB Exp RB
   71    | Exp DOT ID
   72    | ID
   73    | INT
   74    | FLOAT
   75    | CHAR
   76    | ID LP error RP

   77 Args: Exp COMMA Args
   78     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 20 21 25 32 33 40 41 42 64 66 76
TYPE (258) 11
ERR (259) 17 47 49 50
CHAR (260) 75
INT (261) 16 73
FLOAT (262) 74
ID (263) 13 14 15 18 19 20 21 66 68 69 71 72 76
STRUCT (264) 13 14
IF (265) 34 35
ELSE (266) 35
WHILE (267) 36
RETURN (268) 31 33
DOT (269) 71
SEMI (270) 4 5 8 29 31 32 33 39 40 41 66
COMMA (271) 10 22 44 77
ASSIGN (272) 46 47 48 50
LT (273) 53
LE (274) 54
GT (275) 55
GE (276) 56
NE (277) 57
EQ (278) 58
PLUS (279) 59
MINUS (280) 60
MUL (281) 61
DIV (282) 62
SUB (283) 65
AND (284) 51
OR (285) 52
NOT (286) 67
LP (287) 18 19 20 21 34 35 36 63 64 66 68 69 76
RP (288) 18 19 34 35 36 63 64 68 69 76
LB (289) 16 70
RB (290) 16 70
LC (291) 13 20 21 26
RC (292) 13 26
THEN (293)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
Program (40)
    on left: 1, on right: 0
ExtDefList (41)
    on left: 2 3, on right: 1 2
ExtDef (42)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (43)
    on left: 9 10, on right: 4 7 10
Specifier (44)
    on left: 11 12, on right: 4 5 6 7 24 39 40
StructSpecifier (45)
    on left: 13 14, on right: 12
VarDec (46)
    on left: 15 16 17, on right: 9 10 16 24 25 45 46 47
FunDec (47)
    on left: 18 19 20 21, on right: 6 42
VarList (48)
    on left: 22 23, on right: 18 20 22
ParamDec (49)
    on left: 24 25, on right: 22 23
CompSt (50)
    on left: 26, on right: 6 30 42
StmtList (51)
    on left: 27 28, on right: 26 27
Stmt (52)
    on left: 29 30 31 32 33 34 35 36, on right: 27 34 35 36
DefList (53)
    on left: 37 38, on right: 13 26 37
Def (54)
    on left: 39 40 41 42, on right: 37
DecList (55)
    on left: 43 44, on right: 39 40 41 44
Dec (56)
    on left: 45 46 47, on right: 43 44
Exp (57)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76, on right: 29 31 32 33 34 35 36
    46 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 67 70
    71 77 78
Args (58)
    on left: 77 78, on right: 66 68 77


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . ID LC DefList RC
   14                | STRUCT . ID

    ID  shift, and go to state 10


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList error

    ERR   shift, and go to state 13
    ID    shift, and go to state 14
    SEMI  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   13 StructSpecifier: STRUCT ID . LC DefList RC
   14                | STRUCT ID .

    LC  shift, and go to state 19

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   17 VarDec: ERR .

    $default  reduce using rule 17 (VarDec)


State 14

   15 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP
   20       | ID . LP VarList error LC
   21       | ID . LP error LC

    LP  shift, and go to state 20

    $default  reduce using rule 15 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList . error

    error  shift, and go to state 21
    SEMI   shift, and go to state 22


State 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   16 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 19

   13 StructSpecifier: STRUCT ID LC . DefList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 38 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 29
    Def              go to state 30


State 20

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP
   20       | ID LP . VarList error LC
   21       | ID LP . error LC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 32

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 21

    7 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 7 (ExtDef)


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

   10 ExtDecList: VarDec COMMA . ExtDecList

    ERR  shift, and go to state 13
    ID   shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 17


State 24

   16 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 38


State 25

   26 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    CHAR    reduce using rule 38 (DefList)
    INT     reduce using rule 38 (DefList)
    FLOAT   reduce using rule 38 (DefList)
    ID      reduce using rule 38 (DefList)
    IF      reduce using rule 38 (DefList)
    WHILE   reduce using rule 38 (DefList)
    RETURN  reduce using rule 38 (DefList)
    SUB     reduce using rule 38 (DefList)
    NOT     reduce using rule 38 (DefList)
    LP      reduce using rule 38 (DefList)
    LC      reduce using rule 38 (DefList)
    RC      reduce using rule 38 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 39
    Def              go to state 30


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   41 Def: error . DecList SEMI
   42    | error . FunDec CompSt

    ERR  shift, and go to state 13
    ID   shift, and go to state 14

    VarDec   go to state 40
    FunDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


State 28

   39 Def: Specifier . DecList SEMI
   40    | Specifier . DecList error SEMI

    ERR  shift, and go to state 13
    ID   shift, and go to state 36

    VarDec   go to state 40
    DecList  go to state 44
    Dec      go to state 43


State 29

   13 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 45


State 30

   37 DefList: Def . DefList

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    CHAR    reduce using rule 38 (DefList)
    INT     reduce using rule 38 (DefList)
    FLOAT   reduce using rule 38 (DefList)
    ID      reduce using rule 38 (DefList)
    IF      reduce using rule 38 (DefList)
    WHILE   reduce using rule 38 (DefList)
    RETURN  reduce using rule 38 (DefList)
    SUB     reduce using rule 38 (DefList)
    NOT     reduce using rule 38 (DefList)
    LP      reduce using rule 38 (DefList)
    LC      reduce using rule 38 (DefList)
    RC      reduce using rule 38 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 30


State 31

   21 FunDec: ID LP error . LC
   25 ParamDec: error . VarDec

    ERR  shift, and go to state 13
    ID   shift, and go to state 36
    LC   shift, and go to state 47

    VarDec  go to state 48


State 32

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 33

   24 ParamDec: Specifier . VarDec

    ERR  shift, and go to state 13
    ID   shift, and go to state 36

    VarDec  go to state 49


State 34

   18 FunDec: ID LP VarList . RP
   20       | ID LP VarList . error LC

    error  shift, and go to state 50
    RP     shift, and go to state 51


State 35

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 23 (VarList)


State 36

   15 VarDec: ID .

    $default  reduce using rule 15 (VarDec)


State 37

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 38

   16 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


State 39

   26 CompSt: LC DefList . StmtList RC

    CHAR    shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    RETURN  shift, and go to state 60
    SUB     shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 25

    $default  reduce using rule 28 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 65
    Stmt      go to state 66
    Exp       go to state 67


State 40

   16 VarDec: VarDec . LB INT RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGN Exp
   47    | VarDec . ASSIGN ERR

    ASSIGN  shift, and go to state 68
    LB      shift, and go to state 24

    $default  reduce using rule 45 (Dec)


State 41

   42 Def: error FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 69


State 42

   41 Def: error DecList . SEMI

    SEMI  shift, and go to state 70


State 43

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 43 (DecList)


State 44

   39 Def: Specifier DecList . SEMI
   40    | Specifier DecList . error SEMI

    error  shift, and go to state 72
    SEMI   shift, and go to state 73


State 45

   13 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 46

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 47

   21 FunDec: ID LP error LC .

    $default  reduce using rule 21 (FunDec)


State 48

   16 VarDec: VarDec . LB INT RB
   25 ParamDec: error VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 25 (ParamDec)


State 49

   16 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 24 (ParamDec)


State 50

   20 FunDec: ID LP VarList error . LC

    LC  shift, and go to state 74


State 51

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 52

   22 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 75
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 76
    ParamDec         go to state 35


State 53

   16 VarDec: VarDec LB INT RB .

    $default  reduce using rule 16 (VarDec)


State 54

   75 Exp: CHAR .

    $default  reduce using rule 75 (Exp)


State 55

   73 Exp: INT .

    $default  reduce using rule 73 (Exp)


State 56

   74 Exp: FLOAT .

    $default  reduce using rule 74 (Exp)


State 57

   66 Exp: ID . LP Args error SEMI
   68    | ID . LP Args RP
   69    | ID . LP RP
   72    | ID .
   76    | ID . LP error RP

    LP  shift, and go to state 77

    $default  reduce using rule 72 (Exp)


State 58

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 78


State 59

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


State 60

   31 Stmt: RETURN . Exp SEMI
   33     | RETURN . Exp error SEMI

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 80


State 61

   65 Exp: SUB . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 81


State 62

   67 Exp: NOT . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 82


State 63

   63 Exp: LP . Exp RP
   64    | LP . Exp error RP

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 83


State 64

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 65

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 84


State 66

   27 StmtList: Stmt . StmtList

    CHAR    shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    RETURN  shift, and go to state 60
    SUB     shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 25

    $default  reduce using rule 28 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 85
    Stmt      go to state 66
    Exp       go to state 67


State 67

   29 Stmt: Exp . SEMI
   32     | Exp . error SEMI
   48 Exp: Exp . ASSIGN Exp
   49    | Exp . ERR Exp
   50    | Exp . ASSIGN ERR
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . LT Exp
   54    | Exp . LE Exp
   55    | Exp . GT Exp
   56    | Exp . GE Exp
   57    | Exp . NE Exp
   58    | Exp . EQ Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MUL Exp
   62    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . DOT ID

    error   shift, and go to state 86
    ERR     shift, and go to state 87
    DOT     shift, and go to state 88
    SEMI    shift, and go to state 89
    ASSIGN  shift, and go to state 90
    LT      shift, and go to state 91
    LE      shift, and go to state 92
    GT      shift, and go to state 93
    GE      shift, and go to state 94
    NE      shift, and go to state 95
    EQ      shift, and go to state 96
    PLUS    shift, and go to state 97
    MINUS   shift, and go to state 98
    MUL     shift, and go to state 99
    DIV     shift, and go to state 100
    AND     shift, and go to state 101
    OR      shift, and go to state 102
    LB      shift, and go to state 103


State 68

   46 Dec: VarDec ASSIGN . Exp
   47    | VarDec ASSIGN . ERR

    ERR    shift, and go to state 104
    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 105


State 69

   42 Def: error FunDec CompSt .

    $default  reduce using rule 42 (Def)


State 70

   41 Def: error DecList SEMI .

    $default  reduce using rule 41 (Def)


State 71

   44 DecList: Dec COMMA . DecList

    ERR  shift, and go to state 13
    ID   shift, and go to state 36

    VarDec   go to state 40
    DecList  go to state 106
    Dec      go to state 43


State 72

   40 Def: Specifier DecList error . SEMI

    SEMI  shift, and go to state 107


State 73

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 74

   20 FunDec: ID LP VarList error LC .

    $default  reduce using rule 20 (FunDec)


State 75

   25 ParamDec: error . VarDec

    ERR  shift, and go to state 13
    ID   shift, and go to state 36

    VarDec  go to state 48


State 76

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 77

   66 Exp: ID LP . Args error SEMI
   68    | ID LP . Args RP
   69    | ID LP . RP
   76    | ID LP . error RP

    error  shift, and go to state 108
    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    RP     shift, and go to state 109

    Exp   go to state 110
    Args  go to state 111


State 78

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 112


State 79

   36 Stmt: WHILE LP . Exp RP Stmt

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 113


State 80

   31 Stmt: RETURN Exp . SEMI
   33     | RETURN Exp . error SEMI
   48 Exp: Exp . ASSIGN Exp
   49    | Exp . ERR Exp
   50    | Exp . ASSIGN ERR
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . LT Exp
   54    | Exp . LE Exp
   55    | Exp . GT Exp
   56    | Exp . GE Exp
   57    | Exp . NE Exp
   58    | Exp . EQ Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MUL Exp
   62    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . DOT ID

    error   shift, and go to state 114
    ERR     shift, and go to state 87
    DOT     shift, and go to state 88
    SEMI    shift, and go to state 115
    ASSIGN  shift, and go to state 90
    LT      shift, and go to state 91
    LE      shift, and go to state 92
    GT      shift, and go to state 93
    GE      shift, and go to state 94
    NE      shift, and go to state 95
    EQ      shift, and go to state 96
    PLUS    shift, and go to state 97
    MINUS   shift, and go to state 98
    MUL     shift, and go to state 99
    DIV     shift, and go to state 100
    AND     shift, and go to state 101
    OR      shift, and go to state 102
    LB      shift, and go to state 103


State 81

   48 Exp: Exp . ASSIGN Exp
   49    | Exp . ERR Exp
   50    | Exp . ASSIGN ERR
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . LT Exp
   54    | Exp . LE Exp
   55    | Exp . GT Exp
   56    | Exp . GE Exp
   57    | Exp . NE Exp
   58    | Exp . EQ Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MUL Exp
   62    | Exp . DIV Exp
   65    | SUB Exp .
   70    | Exp . LB Exp RB
   71    | Exp . DOT ID

    DOT    shift, and go to state 88
    MINUS  shift, and go to state 98
    LB     shift, and go to state 103

    $default  reduce using rule 65 (Exp)


State 82

   48 Exp: Exp . ASSIGN Exp
   49    | Exp . ERR Exp
   50    | Exp . ASSIGN ERR
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . LT Exp
   54    | Exp . LE Exp
   55    | Exp . GT Exp
   56    | Exp . GE Exp
   57    | Exp . NE Exp
   58    | Exp . EQ Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MUL Exp
   62    | Exp . DIV Exp
   67    | NOT Exp .
   70    | Exp . LB Exp RB
   71    | Exp . DOT ID

    DOT    shift, and go to state 88
    MINUS  shift, and go to state 98
    LB     shift, and go to state 103

    $default  reduce using rule 67 (Exp)


State 83

   48 Exp: Exp . ASSIGN Exp
   49    | Exp . ERR Exp
   50    | Exp . ASSIGN ERR
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . LT Exp
   54    | Exp . LE Exp
   55    | Exp . GT Exp
   56    | Exp . GE Exp
   57    | Exp . NE Exp
   58    | Exp . EQ Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MUL Exp
   62    | Exp . DIV Exp
   63    | LP Exp . RP
   64    | LP Exp . error RP
   70    | Exp . LB Exp RB
   71    | Exp . DOT ID

    error   shift, and go to state 116
    ERR     shift, and go to state 87
    DOT     shift, and go to state 88
    ASSIGN  shift, and go to state 90
    LT      shift, and go to state 91
    LE      shift, and go to state 92
    GT      shift, and go to state 93
    GE      shift, and go to state 94
    NE      shift, and go to state 95
    EQ      shift, and go to state 96
    PLUS    shift, and go to state 97
    MINUS   shift, and go to state 98
    MUL     shift, and go to state 99
    DIV     shift, and go to state 100
    AND     shift, and go to state 101
    OR      shift, and go to state 102
    RP      shift, and go to state 117
    LB      shift, and go to state 103


State 84

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 85

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 86

   32 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 118


State 87

   49 Exp: Exp ERR . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 119


State 88

   71 Exp: Exp DOT . ID

    ID  shift, and go to state 120


State 89

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 90

   48 Exp: Exp ASSIGN . Exp
   50    | Exp ASSIGN . ERR

    ERR    shift, and go to state 121
    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 122


State 91

   53 Exp: Exp LT . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 123


State 92

   54 Exp: Exp LE . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 124


State 93

   55 Exp: Exp GT . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 125


State 94

   56 Exp: Exp GE . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 126


State 95

   57 Exp: Exp NE . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 127


State 96

   58 Exp: Exp EQ . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 128


State 97

   59 Exp: Exp PLUS . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 129


State 98

   60 Exp: Exp MINUS . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 130


State 99

   61 Exp: Exp MUL . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 131


State 100

   62 Exp: Exp DIV . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 132


State 101

   51 Exp: Exp AND . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 133


State 102

   52 Exp: Exp OR . Exp

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 134


State 103

   70 Exp: Exp LB . Exp RB

    CHAR   shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    SUB    shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 135


State 104

   47 Dec: VarDec ASSIGN ERR .

    $default  reduce using rule 47 (Dec)


State 105

   46 Dec: VarDec ASSIGN Exp .
   48 Exp: Exp . ASSIGN Exp
   49    | Exp . ERR Exp
   50    | Exp . ASSIGN ERR
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . LT Exp
   54    | Exp . LE Exp
   55    | Exp . GT Exp
   56    | Exp . GE Exp
   57    | Exp . NE Exp
   58    | Exp . EQ Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MUL Exp
   62    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . DOT ID
